issue-38: updating server for debugging purposes